Bug 803994 - If UNAVAILABLE response occurs at imap login, show server response & don't prompt for password. r=mkmelin

This rebases and updates the patch by David Lechner from 12 years ago using additional information from
https://bugzilla.mozilla.org/show_bug.cgi?id=1602375#c6

Differential Revision: https://phabricator.services.mozilla.com/D186683

--HG--
extra : amend_source : 3ea9d7d11d80e32761c3a9554b880e36cef47a88